# course_work6

./: pyproject.toml
config/: settings.py
mailing/: admin.py  forms.py  models.py  services.py  urls.py  views.py
mailing/migrations/: 0001_initial.py
mailing/templates/mailing/: base.html  client_confirm_delete.html  client_form.html  client_list.html  home.html  mailing_attempt_list.html  mailing_confirm_delete.html  mailing_detail.html  mailing_form.html  mailing_list.html  message_confirm_delete.html  message_form.html  message_list.html
mailing/templates/mailing/includes/: inc_main_menu.html
