[tool.poetry]
name = "course-work6"
version = "0.1.0"
description = ""
authors = ["IliaPr <ilya.prianichnikov@gmail.com>"]
readme = "README.md"
packages = [{include = "course_work6"}]

[tool.poetry.dependencies]
python = "^3.11"
django-scheduler = "^0.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
